force-app/main/default/objects/OpportunityLineItem/fields/ASP__c.field-meta.xml
<CustomField>
    <fullName>ASP__c</fullName>
    <label>ASP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>