force-app/main/default/objects/OpportunityLineItem/fields/Base_SKU__c.field-meta.xml
<CustomField>
    <fullName>Base_SKU__c</fullName>
    <description>Opp Reg &gt; SAP integration; shows the Base SKU from the underlying Product</description>
    <formula>PricebookEntry.Product2.Base_SKU__c</formula>
    <inlineHelpText>Opp Reg &gt; SAP integration; shows the Base SKU from the underlying Product</inlineHelpText>
    <label>Base SKU</label>
    <type>Text</type>
</CustomField>