force-app/main/default/objects/OpportunityLineItem/fields/Deal_MDF__c.field-meta.xml
<CustomField>
    <fullName>Deal_MDF__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>This amount will reflect the full replacement amount of standard accrual. This does not represent incremental accrual.</inlineHelpText>
    <label>Deal MDF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>