force-app/main/default/objects/OpportunityLineItem/fields/Deployment_Location__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Location__c</fullName>
    <description>SDS-1631 - Sales: EGX enhancements needed in system</description>
    <label>Deployment Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Edge</fullName>
            </value>
            <value>
                <fullName>Datacenter</fullName>
            </value>
            <value>
                <fullName>Workstation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>