force-app/main/default/objects/OpportunityLineItem/fields/Discount_Amount_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount_Per_Unit__c</fullName>
    <formula>ListPrice  -  UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Amount Per Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>