force-app/main/default/objects/OpportunityLineItem/fields/Distributor_Price__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Price__c</fullName>
    <label>Distributor Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>