force-app/main/default/objects/OpportunityLineItem/fields/GPU_Quantities__c.field-meta.xml
<CustomField>
    <fullName>GPU_Quantities__c</fullName>
    <description>This field is a multiplication of Quantity and No. of GPUs field on Product. It is used in Rollup summary field &quot;Total GPU Quantities&quot; at Opportunity.</description>
    <label>GPU Quantities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>