force-app/main/default/objects/OpportunityLineItem/fields/Is_CSP_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_CSP_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is CSP Product?</label>
    <type>Checkbox</type>
</CustomField>