force-app/main/default/objects/OpportunityLineItem/fields/Is_Deal_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Deal_Enabled__c</fullName>
    <description>Used in Deal Reg : sets to true if the underlying product is Deal Reg enabled</description>
    <formula>PricebookEntry.Product2.Is_Deal_Enabled__c</formula>
    <label>Is Deal Enabled</label>
    <type>Checkbox</type>
</CustomField>