force-app/main/default/objects/OpportunityLineItem/fields/Is_Deal_Enabled_Ref__c.field-meta.xml
<CustomField>
    <fullName>Is_Deal_Enabled_Ref__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deal Enabled_Ref</label>
    <type>Checkbox</type>
</CustomField>