force-app/main/default/objects/OpportunityLineItem/fields/Legacy_SE_Clone_Source_OLI_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_SE_Clone_Source_OLI_Id__c</fullName>
    <description>This field is used by &apos;AutoCreateOpptyforFutureQuarterSchEntrys.cls&apos; in the code to store Source OpportunityLineItem Id while Cloning.</description>
    <label>Legacy_SE_Clone_Source_OLI_Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>