force-app/main/default/objects/OpportunityLineItem/fields/Line_Item_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Total_Cost__c</fullName>
    <description>Total cost of the line item (Quantity * Sales Price)</description>
    <formula>UnitPrice  *   Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Item Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>