force-app/main/default/objects/OpportunityLineItem/fields/Minimum_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Quantity__c</fullName>
    <description>SDS-2778</description>
    <label>Minimum Quantity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>