force-app/main/default/objects/OpportunityLineItem/fields/Monthly_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Quantity__c</fullName>
    <description>Populated with the line item quantity, via Apex</description>
    <label>Monthly Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>