force-app/main/default/objects/OpportunityLineItem/fields/Notebook_Cost__c.field-meta.xml
<CustomField>
    <fullName>Notebook_Cost__c</fullName>
    <formula>PricebookEntry.Product2.Notebook_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notebook Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>