force-app/main/default/objects/OpportunityLineItem/fields/Number_of_GPUs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_GPUs__c</fullName>
    <formula>PricebookEntry.Product2.Number_of_GPUs__c * Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of GPUs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>