force-app/main/default/objects/OpportunityLineItem/fields/NVIDIA_MTM_Number__c.field-meta.xml
<CustomField>
    <fullName>NVIDIA_MTM_Number__c</fullName>
    <description>NVIDIA MTM Number from the Price Book Entry Object</description>
    <formula>PricebookEntry.NVIDIA_MTM_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>NVIDIA MTM Number from the Price Book Entry Object</inlineHelpText>
    <label>NVIDIA MTM Number</label>
    <type>Text</type>
</CustomField>