force-app/main/default/objects/OpportunityLineItem/fields/OEM_Price__c.field-meta.xml
<CustomField>
    <fullName>OEM_Price__c</fullName>
    <label>OEM Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>