force-app/main/default/objects/OpportunityLineItem/fields/Old_OLI_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_OLI_Id__c</fullName>
    <description>Temporary - Needed for Data Migration related to Quadro Sales Opportunity split to GRID Sales Oppty. SIR PJ-24042</description>
    <label>Old OLI Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>