force-app/main/default/objects/OpportunityLineItem/fields/Opp_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Opp_Line_Number__c</fullName>
    <displayFormat>OLI-{000000}</displayFormat>
    <label>Opp Line Number</label>
    <type>AutoNumber</type>
</CustomField>