force-app/main/default/objects/OpportunityLineItem/fields/Opportunity_Qualified_for_EDU_Approval__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Qualified_for_EDU_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SDS-2823
This field will be updated by the Process Builder &apos;Opp Prod: Update &apos;Qualified for EDU Approval&apos; on OPP&apos;</description>
    <label>Opportunity Qualified for EDU Approval</label>
    <type>Checkbox</type>
</CustomField>