force-app/main/default/objects/OpportunityLineItem/fields/Pricing_Approved__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Approved__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Pricing Approved</label>
    <type>Checkbox</type>
</CustomField>