force-app/main/default/objects/OpportunityLineItem/fields/Product_Cost1__c.field-meta.xml
<CustomField>
    <fullName>Product_Cost1__c</fullName>
    <label>Product Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>