force-app/main/default/objects/OpportunityLineItem/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>Product2.Name, captured when the OpportunityLineItem is added for a Notebook Opportunity; this is passed on to any associated Schedule Entries for display in the related list and in reports</description>
    <label>Product Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>