force-app/main/default/objects/OpportunityLineItem/fields/RTX_Details__c.field-meta.xml
<CustomField>
    <fullName>RTX_Details__c</fullName>
    <inlineHelpText>RTX Server: RTX is deployed in the data center
Data Science Workstation: Data science opportunities with workstations
Workstation: Opportunity with no specific solution</inlineHelpText>
    <label>RTX Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RTX Server</fullName>
            </value>
            <value>
                <fullName>Data Science Workstation</fullName>
            </value>
            <value>
                <fullName>Workstation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>