force-app/main/default/objects/OpportunityLineItem/fields/Sold_Through_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Sold_Through_Inventory__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Admin controlled field to track MCO attainment. For any questions, please contact your regional sales operations team.</inlineHelpText>
    <label>Sold Through Inventory</label>
    <type>Checkbox</type>
</CustomField>