force-app/main/default/objects/OpportunityLineItem/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <description>Opp Reg &gt; SAP integration; shows the Term from the underlying Product</description>
    <formula>PricebookEntry.Product2.Term__c</formula>
    <inlineHelpText>Opp Reg &gt; SAP integration; shows the Term from the underlying Product</inlineHelpText>
    <label>Term</label>
    <type>Text</type>
</CustomField>