force-app/main/default/objects/OpportunityLineItem/fields/Total_Line_MDF__c.field-meta.xml
<CustomField>
    <fullName>Total_Line_MDF__c</fullName>
    <formula>Quantity  *  Deal_MDF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Line MDF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>