force-app/main/default/objects/OpportunityLineItem/fields/Total_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_List_Price__c</fullName>
    <description>Used in Special Pricing Opportunity rollups to display full discounted amount on the Opportunity</description>
    <formula>ListPrice  *  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total List Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>