force-app/main/default/objects/OpportunityLineItem/fields/Training_Service__c.field-meta.xml
<CustomField>
    <fullName>Training_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Service</label>
    <referenceTo>Training_Service_Catalog__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>