force-app/main/default/objects/OpportunityLineItem/fields/Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Use_Case__c</fullName>
    <description>For Enterprise Design Win sales process</description>
    <label>Use Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AI</fullName>
            </value>
            <value>
                <fullName>Compute</fullName>
            </value>
            <value>
                <fullName>Visualization</fullName>
            </value>
            <value>
                <fullName>Compute &amp; Visualization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>