force-app/main/default/objects/OpportunityLineItem/fields/Used_for_GRID_Application__c.field-meta.xml
<CustomField>
    <fullName>Used_for_GRID_Application__c</fullName>
    <label>Used for GRID Application?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>