force-app/main/default/objects/OpportunityLineItem/validationRules/MDF_Amount_cannot_exceed_guidance.validationRule-meta.xml
<ValidationRule>
    <fullName>MDF_Amount_cannot_exceed_guidance</fullName>
    <active>true</active>
    <description>MDF Amount on Opportunity product cannot exceed the amount outlined in the Pricebook</description>
    <errorConditionFormula>Deal_MDF__c  &gt;  PricebookEntry.MDF_Max_Amount__c</errorConditionFormula>
    <errorDisplayField>Deal_MDF__c</errorDisplayField>
    <errorMessage>The Deal MDF outlined is greater than the amount outlined in the Pricebook for this product</errorMessage>
</ValidationRule>