force-app/main/default/objects/OpportunityLineItem/validationRules/No_price_changes_on_SCOPE_Opptys.validationRule-meta.xml
<ValidationRule>
    <fullName>No_price_changes_on_SCOPE_Opptys</fullName>
    <active>true</active>
    <description>Do not allow the sales price to be changed on SCOPE deals</description>
    <errorConditionFormula>AND(
	Opportunity.RecordType.DeveloperName  = &quot;OEM_Bid_Opportunity&quot;,
	ISCHANGED ( UnitPrice )
)</errorConditionFormula>
    <errorMessage>Sales Price cannot be changed on SCOPE deals</errorMessage>
</ValidationRule>