force-app/main/default/objects/OpportunityLineItem/validationRules/Prevent_Updating_inProgress_Opptys.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Updating_inProgress_Opptys</fullName>
    <active>true</active>
    <description>SDS-3043</description>
    <errorConditionFormula>AND(
 $Profile.Name &lt;&gt; &apos;System Administrator&apos;,
 Opportunity.RecordType.DeveloperName = &quot;Special_Pricing_Request&quot;,
 ISPICKVAL(Opportunity.StageName, &apos;In Progress&apos;),
 OR(
  ISCHANGED(UnitPrice),
  ISCHANGED(Minimum_Quantity__c),
  ISCHANGED(Quantity)
 )  
)</errorConditionFormula>
    <errorMessage>Requests that are approved cannot be edited. Please enter a new pricing request for re-approval</errorMessage>
</ValidationRule>